@@ -17,6 +17,7 @@ Added: Improved behavior for @Before/@AfterClass when using @Factory
 Added: Support for concurrent execution for invocationCount=1 threadPoolSize>1 and @DataProvider
 (http://forums.opensymphony.com/thread.jspa?threadID=64738&tstart=0)
 Added: New TestNG specific XML report, generated by default in 'xml' subdirectory of test-output
+Added: support in strprotocol for passing the ITest.getTestName() information
 
 Eclipse plug-in
 
@@ -24,6 +25,7 @@ Fixed: Bug that made group launch configurations unusable
 Fixed: The plugin doesn't create the correct launch configuration for @Factory
 Fixed: Method based launchers cannot be editted
 Fixed: Plugin hangs while executing test with dataprovider that sends \n, \r messages
+Added: display ITest.getTestName()
 
 IDEA plug-in
 
